# tricks

infrastructure/: CMakeLists.txt  CMakePresets.json  tools.cmake
scripts/: build.py  clean.bash  enter_docker.bash
scripts/python_imports/internal/: checks.py
src/tricks/: tricks.cpp
src/tricks/include/tricks/: tricks.hpp
test/functional_tests/000_text/: main.cpp
test/test_helpers/: test_helpers.cpp
test/test_helpers/include/test_helpers/: test_helper.hpp
